# firebase2-dart

./: .gitignore  BUILD.gn  README.md  index.html  index.json  pubspec.yaml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/mojo/: build.gradle  google-services.json  proguard-rules.pro
android/mojo/libs/: README.md
android/mojo/src/androidTest/java/com/google/firebase/mojo/: ApplicationTest.java
android/mojo/src/main/: AndroidManifest.xml
android/mojo/src/main/java/com/google/firebase/mojo/: Conversions.java  DatabaseReferenceImpl.java  FirebaseImpl.java
android/mojo/src/main/res/values/: strings.xml
android/mojo/src/test/java/com/google/firebase/mojo/: ExampleUnitTest.java
firebase/: DatabaseReference-class.html  Event-class.html  FirebaseApp-class.html  FirebaseAuth-class.html  FirebaseDatabase-class.html  Query-class.html  firebase-library.html
firebase/DatabaseReference/: DatabaseReference.html  child.html  hashCode.html  noSuchMethod.html  operator_equals.html  parent.html  push.html  remove.html  root.html  runtimeType.html  set.html  setPriority.html  setWithPriority.html  toString.html
firebase/Event/: Event.html  hashCode.html  noSuchMethod.html  operator_equals.html  prevChild.html  runtimeType.html  snapshot.html  toString.html
firebase/FirebaseApp/: FirebaseApp.html  hashCode.html  instance.html  noSuchMethod.html  operator_equals.html  runtimeType.html  toString.html
firebase/FirebaseAuth/: FirebaseAuth.html  app.html  auth.html  hashCode.html  instance.html  noSuchMethod.html  operator_equals.html  runtimeType.html  signInAnonymously.html  signOut.html  toString.html
firebase/FirebaseDatabase/: FirebaseDatabase.html  app.html  hashCode.html  instance.html  noSuchMethod.html  operator_equals.html  reference.html  runtimeType.html  toString.html
firebase/Query/: Query.html  hashCode.html  noSuchMethod.html  onChildAdded.html  onChildChanged.html  onChildMoved.html  onChildRemoved.html  onValue.html  once.html  operator_equals.html  runtimeType.html  toString.html
ios/: conversions.h  conversions.mm  database_reference_impl.h  database_reference_impl.mm  firebase_impl.h  firebase_impl.mm
ios/src/: firebase_impl.h  firebase_impl.mm
lib/: firebase.dart  firebase_flutter.dart  firebase_js.dart  flutter_services.yaml
lib/src/: app.dart  auth.dart  data_snapshot.dart  database.dart  firebase.dart
lib/src/database/: data_snapshot.dart  disconnect.dart
lib/src/flutter/: app.dart  auth.dart  auth_response.dart  conversions.dart  data_snapshot.dart  database.dart  firebase.dart
lib/src/js/: firebase.dart
lib/src/mojo/: firebase.dart
mojom/: firebase.mojom
src/: firebase_impl.h
